--- a/面试/算法/字符串/简单/字符串-简单(21-40).md
+++ b/面试/算法/字符串/简单/字符串-简单(21-40).md
@@ -6,7 +6,7 @@
 
 
 
-# 字符串-简单(1-20)
+# 字符串-简单(21-40)
 
 ## 21.[[541. 反转字符串 II](https://leetcode-cn.com/problems/reverse-string-ii/)]
 
@@ -555,7 +555,9 @@ class Solution {
 }
 ```
 
-## 31.[[804. 唯一摩尔斯密码词](https://leetcode-cn.com/problems/unique-morse-code-words/)]
+## 31.[[800.相似 RGB 颜色](https://leetcode-cn.com/problems/similar-rgb-color)]
+
+## 32.[[804. 唯一摩尔斯密码词](https://leetcode-cn.com/problems/unique-morse-code-words/)]
 
 **描述**
 
@@ -614,7 +616,7 @@ class Solution {
 }
 ```
 
-## 32.[[819. 最常见的单词](https://leetcode-cn.com/problems/most-common-word/)]
+## 33.[[819. 最常见的单词](https://leetcode-cn.com/problems/most-common-word/)]
 
 **描述**
 
@@ -695,7 +697,7 @@ class Solution {
 }
 ```
 
-## 33.[[824. 山羊拉丁文](https://leetcode-cn.com/problems/goat-latin/)]
+## 34.[[824. 山羊拉丁文](https://leetcode-cn.com/problems/goat-latin/)]
 
 **描述**
 
@@ -780,7 +782,7 @@ class Solution {
 }
 ```
 
-## 34.[[859. 亲密字符串](https://leetcode-cn.com/problems/buddy-strings/)]
+## 35.[[859. 亲密字符串](https://leetcode-cn.com/problems/buddy-strings/)]
 
 **描述**
 
@@ -866,7 +868,7 @@ class Solution {
 }
 ```
 
-## 35.[[893. 特殊等价字符串组](https://leetcode-cn.com/problems/groups-of-special-equivalent-strings/)]
+## 36.[[893. 特殊等价字符串组](https://leetcode-cn.com/problems/groups-of-special-equivalent-strings/)]
 
 **描述**
 
@@ -943,7 +945,7 @@ class Solution {
 }
 ```
 
-## 36.[[917. 仅仅反转字母](https://leetcode-cn.com/problems/reverse-only-letters/)]
+## 37.[[917. 仅仅反转字母](https://leetcode-cn.com/problems/reverse-only-letters/)]
 
 **描述**
 
@@ -1003,7 +1005,7 @@ class Solution {
 }
 ```
 
-## 37.[[925. 长按键入](https://leetcode-cn.com/problems/long-pressed-name/)]
+## 38.[[925. 长按键入](https://leetcode-cn.com/problems/long-pressed-name/)]
 
 **描述**
 
@@ -1067,6 +1069,140 @@ class Solution {
         }
         // 最后比较n的指针是否指到最后
         return i == n.length;
+    }
+}
+```
+
+## 39.[[929. 独特的电子邮件地址](https://leetcode-cn.com/problems/unique-email-addresses/)]
+
+**描述**
+
+每封电子邮件都由一个本地名称和一个域名组成，以 @ 符号分隔。
+
+例如，在 alice@leetcode.com中， alice 是本地名称，而 leetcode.com 是域名。
+
+除了小写字母，这些电子邮件还可能包含 '.' 或 '+'。
+
+如果在电子邮件地址的本地名称部分中的某些字符之间添加句点（'.'），则发往那里的邮件将会转发到本地名称中没有点的同一地址。例如，"alice.z@leetcode.com” 和 “alicez@leetcode.com” 会转发到同一电子邮件地址。 （请注意，此规则不适用于域名。）
+
+如果在本地名称中添加加号（'+'），则会忽略第一个加号后面的所有内容。这允许过滤某些电子邮件，例如 m.y+name@email.com 将转发到 my@email.com。 （同样，此规则不适用于域名。）
+
+可以同时使用这两个规则。
+
+给定电子邮件列表 emails，我们会向列表中的每个地址发送一封电子邮件。实际收到邮件的不同地址有多少？
+
+**示例**
+
+**示例 1：**
+
+```
+输入：["test.email+alex@leetcode.com","test.e.mail+bob.cathy@leetcode.com","testemail+david@lee.tcode.com"]
+输出：2
+解释：实际收到邮件的是 "testemail@leetcode.com" 和 "testemail@lee.tcode.com"。
+```
+
+**注意:**
+
+1. 1 <= emails[i].length <= 100
+2. 1 <= emails.length <= 100
+3. 每封 emails[i] 都包含有且仅有一个 '@' 字符。
+
+**Java**
+
+```java
+class Solution {
+    public int numUniqueEmails(String[] emails) {
+        // 使用set去重
+        Set<String> set = new HashSet();
+        for(String s: emails){
+            StringBuilder sb = new StringBuilder();
+            char[] chars = s.toCharArray();
+            // 遍历到+号,或@结束
+            for(char c : chars){
+                if(c == '.'){
+                    continue;
+                }else if(c == '+' || c == '@'){
+                    break;
+                }else{
+                    sb.append(c);
+                }
+            }
+            // 再从后遍历, 遇到@结束
+            for(int i=s.length()-1; i>=0; i--){
+                if(chars[i] == '@') break;
+                sb.append(chars[i]);
+                
+            }
+            set.add(sb.toString());
+        } 
+        return set.size();
+    }
+}
+```
+
+## 40.[[937. 重新排列日志文件](https://leetcode-cn.com/problems/reorder-data-in-log-files/)]
+
+**描述**
+
+你有一个日志数组 logs。每条日志都是以空格分隔的字串。
+
+对于每条日志，其第一个字为字母与数字混合的 标识符 ，除标识符之外的所有字为这一条日志的 内容 。
+
+- 除标识符之外，所有字均由小写字母组成的，称为 字母日志
+- 除标识符之外，所有字均由数字组成的，称为 数字日志
+
+题目所用数据保证每个日志在其标识符后面至少有一个字。
+
+请按下述规则将日志重新排序：
+
+- 所有 字母日志 都排在 数字日志 之前。
+- 字母日志 在内容不同时，忽略标识符后，按内容字母顺序排序；在内容相同时，按标识符排序；
+- 数字日志 应该按原来的顺序排列。
+
+返回日志的最终顺序。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：["a1 9 2 3 1","g1 act car","zo4 4 7","ab1 off key dog","a8 act zoo"]
+输出：["g1 act car","a8 act zoo","ab1 off key dog","a1 9 2 3 1","zo4 4 7"]
+```
+
+**注意:**
+
+1. 0 <= logs.length <= 100
+2. 3 <= logs[i].length <= 100
+3. logs[i] 保证有一个标识符，并且标识符后面有一个字。
+
+**Java**
+
+```java
+class Solution {
+    public String[] reorderLogFiles(String[] logs) {
+        Arrays.sort(logs, (o1, o2) -> {
+            // 按空格分割字符串, 返回长度为2的数组(分割为标识符和内容)
+            String[] array1 = o1.split(" ", 2);
+            String[] array2 = o2.split(" ", 2);
+            // 判断, 内容是否是字符
+            boolean isLetter1 = Character.isLetter(array1[1].charAt(0));
+            boolean isLetter2 = Character.isLetter(array2[1].charAt(0));
+            // 如果都是字符
+            if(isLetter1 && isLetter2){
+                // 比较两个内容
+                int tmp = array1[1].compareTo(array2[1]);
+                // 如果tmp != 0 说明, 两个内容不相同, 返回比较的结果
+                if(tmp != 0) return tmp;
+                // 两个内容相同, 则需要比较标识符
+                return array1[0].compareTo(array2[0]);
+            }
+            // 如果第一个不是数字, 第二个就是数字, 返回-1, 字符排在前面
+            // 如果第一个是数字, 判断第二个是否是数字, 第二个是数字, 则两个都是数字, 排序不变返回0
+            // 第二个不是数字, 返回1, 让字符排在前面
+            return !isLetter1 ? (!isLetter2 ? 0 : 1 ) : -1;
+        });
+        return logs;
     }
 }
 ```
