--- a/面试/算法/字符串/简单/字符串-简单(41-60).md
+++ b/面试/算法/字符串/简单/字符串-简单(41-60).md
@@ -54,15 +54,691 @@
 ```java
 class Solution {
     public String gcdOfStrings(String str1, String str2) {
-        if(str1.length() < str2.length()){
-            String tmp = str1;
-            str1 = str2;
-            str2 = tmp;
+        // str1 + str2 != str2 + str1, 则说明, 两个字符串之间不存在最大公因子
+        if (!str1.concat(str2).equals(str2.concat(str1))) {
+            return "";
         }
-        while(str2.length() != 0){
-            for(int i=0; i<str1.length(); i+=)
+        // 根据返回的最大公约数, 截取字符串
+        return str1.substring(0, gcd(str1.length(), str2.length()));
+    }
+	// 求最大公约数, 辗转相除法
+    public int gcd(int a, int b) {
+        while(b != 0){
+            int r = a % b;
+            a = b;
+            b = r;
         }
+        return a;
     }
 }
 ```
 
+## 43.[[1108. IP 地址无效化](https://leetcode-cn.com/problems/defanging-an-ip-address/)]
+
+**描述**
+
+给你一个有效的 [IPv4](https://baike.baidu.com/item/IPv4) 地址 `address`，返回这个 IP 地址的无效化版本。
+
+所谓无效化 IP 地址，其实就是用 `"[.]"` 代替了每个 `"."`。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：address = "1.1.1.1"
+输出："1[.]1[.]1[.]1"
+```
+
+**示例 2：**
+
+```
+输入：address = "255.100.50.0"
+输出："255[.]100[.]50[.]0"
+```
+
+**提示：**
+
+1. 给出的 `address` 是一个有效的 IPv4 地址
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String defangIPaddr(String address) {
+        StringBuilder sb = new StringBuilder();
+        for(char c : address.toCharArray()){
+            if(c != '.'){
+                sb.append(c);
+            }else{
+                sb.append("[.]");
+            }
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 44.[[1119.删去字符串中的元音](https://leetcode-cn.com/problems/remove-vowels-from-a-string)]
+
+## 45.[[1165.单行键盘](https://leetcode-cn.com/problems/single-row-keyboard)]
+
+## 46.[[1170. 比较字符串最小字母出现频次](https://leetcode-cn.com/problems/compare-strings-by-frequency-of-the-smallest-character/)]
+
+**描述**
+
+我们来定义一个函数 f(s)，其中传入参数 s 是一个非空字符串；该函数的功能是统计 s  中（按字典序比较）最小字母的出现频次。
+
+例如，若 s = "dcce"，那么 f(s) = 2，因为最小的字母是 "c"，它出现了 2 次。
+
+现在，给你两个字符串数组待查表 queries 和词汇表 words，请你返回一个整数数组 answer 作为答案，其中每个 answer[i] 是满足 f(queries[i]) < f(W) 的词的数目，W 是词汇表 words 中的词。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：queries = ["cbd"], words = ["zaaaz"]
+输出：[1]
+解释：查询 f("cbd") = 1，而 f("zaaaz") = 3 所以 f("cbd") < f("zaaaz")。
+```
+
+**示例 2：**
+
+```
+输入：queries = ["bbb","cc"], words = ["a","aa","aaa","aaaa"]
+输出：[1,2]
+解释：第一个查询 f("bbb") < f("aaaa")，第二个查询 f("aaa") 和 f("aaaa") 都 > f("cc")。
+```
+
+**提示：**
+
+1. 1 <= queries.length <= 2000
+2. 1 <= words.length <= 2000
+3. 1 <= queries[i].length, words[i].length <= 10
+4. queries[i][j], words[i][j] 都是小写英文字母
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] numSmallerByFrequency(String[] queries, String[] words) {
+        int[] bucket = new int[12];
+        // 计算词汇表每个单词的最小字符数量, 存放在桶中
+        for (String w : words)
+            bucket[f(w)]++;
+        // 从后向前累加桶, 计算出, 比当前桶小 加上之后所有桶的数量
+        for (int i = 9; i >= 0; i--)
+            bucket[i] += bucket[i + 1];    
+        int len = queries.length;
+        int[] res = new int[len];
+        for (int i = 0; i < len; i++)
+            // 遍历待查表, 计算出待查表最小字符数量, 去桶中查找 +1的桶, 对应的数量
+            res[i] = bucket[f(queries[i]) + 1];
+        return res;
+    }
+
+    public int f(String s){
+        char[] chars = s.toCharArray();
+        char minC = chars[0];
+        int count = 1;
+        for(int i=1; i<chars.length; i++){
+            if(chars[i] == minC){
+                count++;
+            }else if(chars[i] < minC){
+                minC = chars[i];
+                count = 1;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 47.[[1180.统计只含单一字母的子串](https://leetcode-cn.com/problems/count-substrings-with-only-one-distinct-letter) ]
+
+## 48.[[1189. “气球” 的最大数量](https://leetcode-cn.com/problems/maximum-number-of-balloons/)]
+
+**描述**
+
+给你一个字符串 text，你需要使用 text 中的字母来拼凑尽可能多的单词 "balloon"（气球）。
+
+字符串 text 中的每个字母最多只能被使用一次。请你返回最多可以拼凑出多少个单词 "balloon"。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：text = "nlaebolko"
+输出：1
+```
+
+**示例 2：**
+
+```
+输入：text = "loonbalxballpoon"
+输出：2
+```
+
+**示例 3：**
+
+```
+输入：text = "leetcode"
+输出：0
+```
+
+**提示：**
+
+1. `1 <= text.length <= 10^4`
+2. `text` 全部由小写英文字母组成
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 桶排序
+    public int maxNumberOfBalloons(String text) {
+        int[] bucket = new int[26];
+        for(char c : text.toCharArray()){
+            bucket[c - 'a']++;
+        }
+        int count = bucket[0];
+        count = Math.min(count, bucket[1]);
+        count = Math.min(count, bucket[11] / 2);
+        count = Math.min(count, bucket[13]);
+        return Math.min(count, bucket[14] / 2);
+    }
+}
+```
+
+## 49.[[1221. 分割平衡字符串](https://leetcode-cn.com/problems/split-a-string-in-balanced-strings/)]
+
+**描述**
+
+在一个「平衡字符串」中，'L' 和 'R' 字符的数量是相同的。
+
+给出一个平衡字符串 s，请你将它分割成尽可能多的平衡字符串。
+
+返回可以通过分割得到的平衡字符串的最大数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "RLRRLLRLRL"
+输出：4
+解释：s 可以分割为 "RL", "RRLL", "RL", "RL", 每个子字符串中都包含相同数量的 'L' 和 'R'。
+```
+
+**示例 2：**
+
+```
+输入：s = "RLLLLRRRLR"
+输出：3
+解释：s 可以分割为 "RL", "LLLRRR", "LR", 每个子字符串中都包含相同数量的 'L' 和 'R'。
+```
+
+**示例 3：**
+
+```
+输入：s = "LLLLRRRR"
+输出：1
+解释：s 只能保持原样 "LLLLRRRR".
+```
+
+**提示：**
+
+1. `1 <= s.length <= 1000`
+2. `s[i] = 'L' 或 'R'`
+3. 分割得到的每个字符串都必须是平衡字符串。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int balancedStringSplit(String s) {
+        int count = 0;
+        int sum = s.charAt(0) == 'L' ? 1 : -1;
+        // 遇到L加一, 遇到R减一, 等于0时, 算一对count++
+        for(int i=1; i<s.length(); i++){
+            if(s.charAt(i) == 'L'){
+                sum++;
+            }else{
+                sum--;
+            }
+            if(sum == 0) count++;
+        }
+        return count;
+    }
+}
+```
+
+## 50.[[1271.十六进制魔术数字](https://leetcode-cn.com/problems/hexspeak) ]
+
+## 51.[[1309. 解码字母到整数映射](https://leetcode-cn.com/problems/decrypt-string-from-alphabet-to-integer-mapping/)]
+
+**描述**
+
+给你一个字符串 s，它由数字（'0' - '9'）和 '#' 组成。我们希望按下述规则将 s 映射为一些小写英文字符：
+
+- 字符（'a' - 'i'）分别用（'1' - '9'）表示。
+- 字符（'j' - 'z'）分别用（'10#' - '26#'）表示。 
+
+返回映射之后形成的新字符串。
+
+题目数据保证映射始终唯一。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "10#11#12"
+输出："jkab"
+解释："j" -> "10#" , "k" -> "11#" , "a" -> "1" , "b" -> "2".
+```
+
+**示例 2：**
+
+```
+输入：s = "1326#"
+输出："acz"
+```
+
+**示例 3：**
+
+```
+输入：s = "25#"
+输出："y"
+```
+
+**提示：**
+
+1. `1 <= s.length <= 1000`
+2. `s[i]` 只包含数字（`'0'`-`'9'`）和 `'#'` 字符。
+3. `s` 是映射始终存在的有效字符串。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String freqAlphabets(String s) {
+        int n = s.length();
+        StringBuilder sb = new StringBuilder();
+        // 遍历每个字符, 查看i+2的位置是否是#, 是#, 遍历第一位 * 10 + 后一位
+        for(int i=0; i<n; i++){
+            if(i+2<n && s.charAt(i+2) == '#'){
+                sb.append((char) ('a' + (s.charAt(i) - '0') * 10 + (s.charAt(i+1)) - '0' - 1));
+                i+=2;
+            }else{
+                sb.append((char) ('a' + (s.charAt(i) - '0' - 1)));
+            }
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 52.[[1332. 删除回文子序列](https://leetcode-cn.com/problems/remove-palindromic-subsequences/)]
+
+**描述**
+
+给你一个字符串 s，它仅由字母 'a' 和 'b' 组成。每一次删除操作都可以从 s 中删除一个回文 子序列。
+
+返回删除给定字符串中所有字符（字符串为空）的最小删除次数。
+
+「子序列」定义：如果一个字符串可以通过删除原字符串某些字符而不改变原字符顺序得到，那么这个字符串就是原字符串的一个子序列。
+
+「回文」定义：如果一个字符串向后和向前读是一致的，那么这个字符串就是一个回文。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "ababa"
+输出：1
+解释：字符串本身就是回文序列，只需要删除一次。
+```
+
+**示例 2：**
+
+```
+输入：s = "abb"
+输出：2
+解释："abb" -> "bb" -> "". 
+先删除回文子序列 "a"，然后再删除 "bb"。
+```
+
+**示例 3：**
+
+```
+输入：s = "baabb"
+输出：2
+解释："baabb" -> "b" -> "". 
+先删除回文子序列 "baab"，然后再删除 "b"。
+```
+
+**提示：**
+
+1. `0 <= s.length <= 1000`
+2. `s` 仅包含字母 'a' 和 'b'
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removePalindromeSub(String s) {
+        if(s.length() == 0) return 0;
+        char[] chars = s.toCharArray();
+        int left=0, right=chars.length-1;
+        while(left < right){
+            if(chars[left++] != chars[right--]) return 2;
+        }
+        return 1;
+    }
+}
+```
+
+## 53.[[1370. 上升下降字符串](https://leetcode-cn.com/problems/increasing-decreasing-string/)]
+
+**描述**
+
+给你一个字符串 s ，请你根据下面的算法重新构造字符串：
+
+- 从 s 中选出 最小 的字符，将它 接在 结果字符串的后面。
+- 从 s 剩余字符中选出 最小 的字符，且该字符比上一个添加的字符大，将它 接在 结果字符串后面。
+- 重复步骤 2 ，直到你没法从 s 中选择字符。
+- 从 s 中选出 最大 的字符，将它 接在 结果字符串的后面。
+- 从 s 剩余字符中选出 最大 的字符，且该字符比上一个添加的字符小，将它 接在 结果字符串后面。
+- 重复步骤 5 ，直到你没法从 s 中选择字符。
+- 重复步骤 1 到 6 ，直到 s 中所有字符都已经被选过。
+
+请你返回将 s 中字符重新排序后的 结果字符串 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "aaaabbbbcccc"
+输出："abccbaabccba"
+解释：第一轮的步骤 1，2，3 后，结果字符串为 result = "abc"
+第一轮的步骤 4，5，6 后，结果字符串为 result = "abccba"
+第一轮结束，现在 s = "aabbcc" ，我们再次回到步骤 1
+第二轮的步骤 1，2，3 后，结果字符串为 result = "abccbaabc"
+第二轮的步骤 4，5，6 后，结果字符串为 result = "abccbaabccba"
+```
+
+**示例 2：**
+
+```
+输入：s = "rat"
+输出："art"
+解释：单词 "rat" 在上述算法重排序以后变成 "art"
+```
+
+**示例 3：**
+
+```
+输入：s = "leetcode"
+输出："cdelotee"
+```
+
+**提示：**
+
+1. `1 <= s.length <= 500`
+2. `s` 只包含小写英文字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 桶排序
+    public String sortString(String s) {
+        int len = s.length();
+        int[] bucket = new int[26];
+        for(char c : s.toCharArray()){
+            bucket[c - 'a']++;
+        }
+        StringBuilder sb = new StringBuilder();
+        int index = 0;
+        // 先从前往后遍历, 再从后向前遍历
+        while(index < len){
+            for(int i=0; i<26; i++){
+                if(bucket[i] != 0){
+                    sb.append((char)(i + 'a'));
+                    bucket[i]--;
+                    index++;
+                }
+            }
+            for(int i=25; i>=0; i--){
+                if(bucket[i] != 0){
+                    sb.append((char)(i + 'a'));
+                    bucket[i]--;
+                    index++;
+                }
+            }
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 54.[[1374. 生成每种字符都是奇数个的字符串](https://leetcode-cn.com/problems/generate-a-string-with-characters-that-have-odd-counts/)]
+
+**描述**
+
+给你一个整数 n，请你返回一个含 n 个字符的字符串，其中每种字符在该字符串中都恰好出现 奇数次 。
+
+返回的字符串必须只含小写英文字母。如果存在多个满足题目要求的字符串，则返回其中任意一个即可
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 4
+输出："pppz"
+解释："pppz" 是一个满足题目要求的字符串，因为 'p' 出现 3 次，且 'z' 出现 1 次。当然，还有很多其他字符串也满足题目要求，比如："ohhh" 和 "love"。
+```
+
+**示例 2：**
+
+```
+输入：n = 2
+输出："xy"
+解释："xy" 是一个满足题目要求的字符串，因为 'x' 和 'y' 各出现 1 次。当然，还有很多其他字符串也满足题目要求，比如："ag" 和 "ur"。
+```
+
+**示例 3：**
+
+```
+输入：n = 7
+输出："holasss"
+```
+
+**提示：**
+
+1. `1 <= n <= 500`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // n为奇数, 全是a, n为偶数, 最后一个a改为b
+    public String generateTheString(int n) {
+        char[] chars = new char[n];
+        Arrays.fill(chars, 'a');
+        if(n % 2 == 0){
+            chars[chars.length-1] = 'b';
+        }
+        return new String(chars);
+    }
+}
+```
+
+## 55.[[1408. 数组中的字符串匹配](https://leetcode-cn.com/problems/string-matching-in-an-array/)]
+
+**描述**
+
+给你一个字符串数组 words ，数组中的每个字符串都可以看作是一个单词。请你按 任意 顺序返回 words 中是其他单词的子字符串的所有单词。
+
+如果你可以删除 words[j] 最左侧和/或最右侧的若干字符得到 word[i] ，那么字符串 words[i] 就是 words[j] 的一个子字符串。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：words = ["mass","as","hero","superhero"]
+输出：["as","hero"]
+解释："as" 是 "mass" 的子字符串，"hero" 是 "superhero" 的子字符串。
+["hero","as"] 也是有效的答案。
+```
+
+**示例 2：**
+
+```
+输入：words = ["leetcode","et","code"]
+输出：["et","code"]
+解释："et" 和 "code" 都是 "leetcode" 的子字符串。
+```
+
+**示例 3：**
+
+```
+输入：words = ["blue","green","bu"]
+输出：[]
+```
+
+**提示：**
+
+1. 1 <= words.length <= 100
+2. 1 <= words[i].length <= 30
+3. words[i] 仅包含小写英文字母。
+4. 题目数据 保证 每个 words[i] 都是独一无二的。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 暴力法, 两遍循环
+    public List<String> stringMatching(String[] words) {
+        List<String> ans = new ArrayList();
+        for(int i=0; i<words.length; i++){
+            for(int j=0; j<words.length; j++){
+                if(j !=i && words[j].indexOf(words[i]) != -1){
+                    ans.add(words[i]);
+                    break;
+                }
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 56.[[1417. 重新格式化字符串](https://leetcode-cn.com/problems/reformat-the-string/)]
+
+**描述**
+
+给你一个混合了数字和字母的字符串 s，其中的字母均为小写英文字母。
+
+请你将该字符串重新格式化，使得任意两个相邻字符的类型都不同。也就是说，字母后面应该跟着数字，而数字后面应该跟着字母。
+
+请你返回 重新格式化后 的字符串；如果无法按要求重新格式化，则返回一个 空字符串 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "a0b1c2"
+输出："0a1b2c"
+解释："0a1b2c" 中任意两个相邻字符的类型都不同。 "a0b1c2", "0a1b2c", "0c2a1b" 也是满足题目要求的答案。
+```
+
+**示例 2：**
+
+```
+输入：s = "leetcode"
+输出：""
+解释："leetcode" 中只有字母，所以无法满足重新格式化的条件。
+```
+
+**示例 3：**
+
+```
+输入：s = "1229857369"
+输出：""
+解释："1229857369" 中只有数字，所以无法满足重新格式化的条件。
+```
+
+**提示：**
+
+1. `1 <= s.length <= 500`
+2. `s` 仅由小写英文字母和/或数字组成。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reformat(String s) {
+        int countD = 0, countC = 0;
+        char[] ans = s.toCharArray();
+        // 分别记录数字和字符串的数量
+        for(char c : ans){
+            if(Character.isDigit(c)){
+                countD++;
+            }else{
+                countC++;
+            }
+        }
+        // 如果数字和字符的数量差, 大于1, 说明无法格式化成功, 返回"";
+        if(Math.abs(countD-countC) > 1) return "";
+        int indexD = 0, indexC = 0;
+        // 数量多的需要先排
+        if(countD > countC){
+            indexC = 1;
+        }else{
+            indexD = 1;
+        }
+        // 重新填充
+        for(char c : s.toCharArray()){
+            if(Character.isLetter(c)){
+                ans[indexC] = c;
+                indexC += 2;
+            }else{
+                ans[indexD] = c;
+                indexD += 2;
+            }
+        }
+        return new String(ans);
+    }
+}
+```
+
+## 
