--- a/面试/算法/字符串/简单/字符串-简单(41-60).md
+++ b/面试/算法/字符串/简单/字符串-简单(41-60).md
@@ -741,4 +741,208 @@ class Solution {
 }
 ```
 
-## 
+## 57.[[1422. 分割字符串的最大得分](https://leetcode-cn.com/problems/maximum-score-after-splitting-a-string/)]
+
+**描述**
+
+给你一个由若干 0 和 1 组成的字符串 s ，请你计算并返回将该字符串分割成两个 非空 子字符串（即 左 子字符串和 右 子字符串）所能获得的最大得分。
+
+「分割字符串的得分」为 左 子字符串中 0 的数量加上 右 子字符串中 1 的数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "011101"
+输出：5 
+解释：
+将字符串 s 划分为两个非空子字符串的可行方案有：
+左子字符串 = "0" 且 右子字符串 = "11101"，得分 = 1 + 4 = 5 
+左子字符串 = "01" 且 右子字符串 = "1101"，得分 = 1 + 3 = 4 
+左子字符串 = "011" 且 右子字符串 = "101"，得分 = 1 + 2 = 3 
+左子字符串 = "0111" 且 右子字符串 = "01"，得分 = 1 + 1 = 2 
+左子字符串 = "01110" 且 右子字符串 = "1"，得分 = 2 + 1 = 3
+```
+
+**示例 2：**
+
+```
+输入：s = "00111"
+输出：5
+解释：当 左子字符串 = "00" 且 右子字符串 = "111" 时，我们得到最大得分 = 2 + 3 = 5
+```
+
+**示例 3：**
+
+```
+输入：s = "1111"
+输出：3
+```
+
+**提示：**
+
+1. `2 <= s.length <= 500`
+2. 字符串 `s` 仅由字符 `'0'` 和 `'1'` 组成。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxScore(String s) {
+        int count = 0;
+        int count0 = 0, count1 = 0;
+        char[] chars = s.toCharArray();
+        // 先算出有多少个1
+        for(char c : chars){
+            if(c == '1') count1++;
+        }
+        // 再次遍历, 计算左边的0的数量, 每遇到一个1, 这个1归到左面, 无用了, 所以1的数量减一.
+        for(int i=0; i<chars.length-1; i++){
+            if(chars[i] == '0'){
+                count0++;
+            }else{
+                count1--;
+            }
+            // 求0和1的最大数量和
+            count = Math.max(count, count0 + count1);
+        }
+        return count;
+    }
+}
+```
+
+## 58.[[1436. 旅行终点站](https://leetcode-cn.com/problems/destination-city/)]
+
+**描述**
+
+给你一份旅游线路图，该线路图中的旅行线路用数组 paths 表示，其中 paths[i] = [cityAi, cityBi] 表示该线路将会从 cityAi 直接前往 cityBi 。请你找出这次旅行的终点站，即没有任何可以通往其他城市的线路的城市。
+
+题目数据保证线路图会形成一条不存在循环的线路，因此只会有一个旅行终点站。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：paths = [["London","New York"],["New York","Lima"],["Lima","Sao Paulo"]]
+输出："Sao Paulo" 
+解释：从 "London" 出发，最后抵达终点站 "Sao Paulo" 。本次旅行的路线是 "London" -> "New York" -> "Lima" -> "Sao Paulo" 。
+```
+
+**示例 2：**
+
+```
+输入：paths = [["B","C"],["D","B"],["C","A"]]
+输出："A"
+解释：所有可能的线路是：
+"D" -> "B" -> "C" -> "A". 
+"B" -> "C" -> "A". 
+"C" -> "A". 
+"A". 
+显然，旅行终点站是 "A" 。
+```
+
+**示例 3：**
+
+```
+输入：paths = [["A","Z"]]
+输出："Z"
+```
+
+**提示：**
+
+1. 1 <= paths.length <= 100
+2. paths[i].length == 2
+3. 1 <= cityAi.length, cityBi.length <= 10
+4. cityAi != cityBi
+5. 所有字符串均由大小写英文字母和空格字符组成。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String destCity(List<List<String>> paths) {
+        Set<String> set = new HashSet();
+        // 存储所有路线的出发点
+        for(List<String> path : paths){
+            set.add(path.get(0));
+        }
+        // 遍历每条路线的终点, 去set中查找, 是否被作为出发点
+        for(List<String> path : paths){
+            if(!set.contains(path.get(1))){
+                return path.get(1);
+            };
+        }
+        return "";
+    }
+}
+```
+
+## 59.[[1446. 连续字符](https://leetcode-cn.com/problems/consecutive-characters/)]
+
+**描述**
+
+给你一个字符串 `s` ，字符串的「能量」定义为：只包含一种字符的最长非空子字符串的长度。
+
+请你返回字符串的能量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "leetcode"
+输出：2
+解释：子字符串 "ee" 长度为 2 ，只包含字符 'e' 。
+```
+
+**示例 2：**
+
+```
+输入：s = "abbcccddddeeeeedcba"
+输出：5
+解释：子字符串 "eeeee" 长度为 5 ，只包含字符 'e' 。
+```
+
+**示例 3：**
+
+```
+输入：s = "triplepillooooow"
+输出：5
+```
+
+**提示：**
+
+1. `1 <= s.length <= 500`
+2. `s` 只包含小写英文字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxPower(String s) {
+        int max = 1;
+        int tmp = 1;
+        s += ".";
+        char[] chars = s.toCharArray();
+        for(int i=0, j=1; j<chars.length; j++){
+            if(chars[i] == chars[j]){
+                tmp++;
+            }else{
+                max = Math.max(max, tmp);
+                tmp = 1;
+                i = j;
+            }
+        }
+        return max;
+    }
+}
+```
+
