--- a/前端/样例.md
+++ b/前端/样例.md
@@ -25,6 +25,10 @@ function MouseWheel(event) {
 
 ## 日期格式化
 
+### 方法一
+
+有兼容问题, 安卓6及已下版本不兼容
+
 ```javascript
 function dateFormat(fmt, date) {
     let ret;
@@ -45,5 +49,45 @@ function dateFormat(fmt, date) {
     };
     return fmt;
 }
+
+// 使用
+let s = dateFormat("yyyy-MM-dd", new date());
+```
+
+### 方法二
+
+```js
+Date.prototype.format = function (fmt) {
+    var o = {
+        "M+": this.getMonth() + 1, //月份
+        "d+": this.getDate(), //日
+        "h+": this.getHours(), //小时
+        "m+": this.getMinutes(), //分
+        "s+": this.getSeconds(), //秒
+        "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+        "S": this.getMilliseconds() //毫秒
+    };
+    if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+    for (var k in o)
+        if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+    return fmt;
+};
+
+// 使用
+new date().format("yyyy-MM-dd");
+```
+
+
+
+# 调试
+
+移动端调试, 插件, 放在页面后, 可以模拟浏览器控制台, 查看报错
+
+```html
+<script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
+<script>
+	// init vConsole
+	var vConsole = new VConsole()
+</script>
 ```
 
