--- a/后端/项目管理工具.md
+++ b/后端/项目管理工具.md
@@ -38,6 +38,12 @@ https://mvnrepository.com/
 
 ## 命令
 
+手动添加jar包
+
+```
+mvn install:install-file -DgroupId=jar包的groupId -DartifactId=jar包名 -Dversion=1.0 -Dpackaging=jar -Dfile=\路径\加包名称-1.0.jar
+```
+
 ## pom文件
 
 ```xml
