--- a/面试/算法/字符串/简单/字符串-简单(61-80).md
+++ b/面试/算法/字符串/简单/字符串-简单(61-80).md
@@ -8,7 +8,7 @@
 
 # 字符串-简单(61-80)
 
-## 41.[[1496. 判断路径是否相交](https://leetcode-cn.com/problems/path-crossing/)]
+## 61.[[1496. 判断路径是否相交](https://leetcode-cn.com/problems/path-crossing/)]
 
 **描述**
 
@@ -76,7 +76,7 @@ class Solution {
 }
 ```
 
-## 42.[[1507. 转变日期格式](https://leetcode-cn.com/problems/reformat-date/)]
+## 62.[[1507. 转变日期格式](https://leetcode-cn.com/problems/reformat-date/)]
 
 **描述**
 
@@ -140,7 +140,7 @@ class Solution {
 }
 ```
 
-## 43.[[1544. 整理字符串](https://leetcode-cn.com/problems/make-the-string-great/)]
+## 63.[[1544. 整理字符串](https://leetcode-cn.com/problems/make-the-string-great/)]
 
 **描述**
 
@@ -216,7 +216,7 @@ class Solution {
 }
 ```
 
-## 44.[[1556. 千位分隔数](https://leetcode-cn.com/problems/thousand-separator/)]
+## 64.[[1556. 千位分隔数](https://leetcode-cn.com/problems/thousand-separator/)]
 
 **描述**
 
@@ -273,7 +273,7 @@ class Solution {
 }
 ```
 
-## 45.[[1576. 替换所有的问号](https://leetcode-cn.com/problems/replace-all-s-to-avoid-consecutive-repeating-characters/)]
+## 65.[[1576. 替换所有的问号](https://leetcode-cn.com/problems/replace-all-s-to-avoid-consecutive-repeating-characters/)]
 
 **描述**
 
@@ -343,7 +343,7 @@ class Solution {
 }
 ```
 
-## 46.[[1576. 替换所有的问号](https://leetcode-cn.com/problems/replace-all-s-to-avoid-consecutive-repeating-characters/)]
+## 66.[[1576. 替换所有的问号](https://leetcode-cn.com/problems/replace-all-s-to-avoid-consecutive-repeating-characters/)]
 
 **描述**
 
@@ -444,4 +444,319 @@ class Solution {
 }
 ```
 
-## 
+## 67.[[1614. 括号的最大嵌套深度](https://leetcode-cn.com/problems/maximum-nesting-depth-of-the-parentheses/)]
+
+**描述**
+
+如果字符串满足一下条件之一，则可以称之为 有效括号字符串（valid parentheses string，可以简写为 VPS）：
+
+- 字符串是一个空字符串 ""，或者是一个不为 "(" 或 ")" 的单字符。
+- 字符串可以写为 AB（A 与 B 字符串连接），其中 A 和 B 都是 有效括号字符串 。
+- 字符串可以写为 (A)，其中 A 是一个 有效括号字符串 。
+
+类似地，可以定义任何有效括号字符串 S 的 嵌套深度 depth(S)：
+
+- depth("") = 0
+- depth(C) = 0，其中 C 是单个字符的字符串，且该字符不是 "(" 或者 ")"
+- depth(A + B) = max(depth(A), depth(B))，其中 A 和 B 都是 有效括号字符串
+- depth("(" + A + ")") = 1 + depth(A)，其中 A 是一个 有效括号字符串
+
+例如：""、"()()"、"()(()())" 都是 有效括号字符串（嵌套深度分别为 0、1、2），而 ")(" 、"(()" 都不是 有效括号字符串 。
+
+给你一个 有效括号字符串 s，返回该字符串的 s 嵌套深度 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "(1+(2*3)+((8)/4))+1"
+输出：3
+解释：数字 8 在嵌套的 3 层括号中。
+```
+
+**示例 2：**
+
+```
+输入：s = "(1)+((2))+(((3)))"
+输出：3
+```
+
+**示例 3：**
+
+```
+输入：s = "1+(2*3)/(2-1)"
+输出：1
+```
+
+**提示：**
+
+1. 1 <= s.length <= 100
+2. s 由数字 0-9 和字符 '+'、'-'、'*'、'/'、'('、')' 组成
+3. 题目数据保证括号表达式 s 是 有效的括号表达式
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxDepth(String s) {
+        // 计算(的数量, 遇到(加一, 遇到)减一, 每次算出最大数量, 保存
+        char[] chars = s.toCharArray();
+        int max = 0;
+        int tmp = 0;
+        for(int i=0; i<chars.length; i++){
+            if(chars[i] == '('){
+                tmp++;
+            }else if(chars[i] == ')'){
+                tmp--;
+            }
+            max = Math.max(max, tmp);
+        }
+        return max;
+    }
+}
+```
+
+## 68.[[1624. 两个相同字符之间的最长子字符串](https://leetcode-cn.com/problems/largest-substring-between-two-equal-characters/)]
+
+**描述**
+
+给你一个字符串 s，请你返回 两个相同字符之间的最长子字符串的长度 ，计算长度时不含这两个字符。如果不存在这样的子字符串，返回 -1 。
+
+子字符串 是字符串中的一个连续字符序列。
+
+**示例 1：**
+
+```
+输入：s = "aa"
+输出：0
+解释：最优的子字符串是两个 'a' 之间的空子字符串。
+```
+
+**示例 2：**
+
+```
+输入：s = "abca"
+输出：2
+解释：最优的子字符串是 "bc" 。
+```
+
+**示例 3：**
+
+```
+输入：s = "cbzxy"
+输出：-1
+解释：s 中不存在出现出现两次的字符，所以返回 -1 。
+```
+
+**提示：**
+
+1. `1 <= s.length <= 300`
+2. `s` 只含小写英文字母
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxLengthBetweenEqualCharacters(String s) {
+        int ans = -1;
+        // 遍历26个字母, 去字符串中查找第一个和最后一个的位置
+        for (int i = 0; i < 26; i++) {
+            ans = Math.max(ans, s.lastIndexOf(i + 'a') - s.indexOf(i + 'a') - 1);
+        }
+        return ans;
+    }
+}
+```
+
+## 69.[[1662. 检查两个字符串数组是否相等](https://leetcode-cn.com/problems/check-if-two-string-arrays-are-equivalent/)]
+
+**描述**
+
+给你两个字符串数组 word1 和 word2 。如果两个数组表示的字符串相同，返回 true ；否则，返回 false 。
+
+数组表示的字符串 是由数组中的所有元素 按顺序 连接形成的字符串。
+
+**示例 1：**
+
+```
+输入：word1 = ["ab", "c"], word2 = ["a", "bc"]
+输出：true
+解释：
+word1 表示的字符串为 "ab" + "c" -> "abc"
+word2 表示的字符串为 "a" + "bc" -> "abc"
+两个字符串相同，返回 true
+```
+
+**示例 2：**
+
+```
+输入：word1 = ["a", "cb"], word2 = ["ab", "c"]
+输出：false
+```
+
+**示例 3：**
+
+```
+输入：word1  = ["abc", "d", "defg"], word2 = ["abcddefg"]
+输出：true
+```
+
+**提示：**
+
+1. 1 <= word1.length, word2.length <= 103
+2. 1 <= word1[i].length, word2[i].length <= 103
+3. 1 <= sum(word1[i].length), sum(word2[i].length) <= 103
+4. word1[i] 和 word2[i] 由小写字母组成
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean arrayStringsAreEqual(String[] word1, String[] word2) {
+        // 拼接成两个字符串之后比较
+        StringBuilder sb1 = new StringBuilder();
+        StringBuilder sb2 = new StringBuilder();
+        for(String s : word1){
+            sb1.append(s);
+        }
+        for(String s : word2){
+            sb2.append(s);
+        }
+        return sb1.toString().equals(sb2.toString());
+    }
+}
+```
+
+## 70.[[1662. 检查两个字符串数组是否相等](https://leetcode-cn.com/problems/check-if-two-string-arrays-are-equivalent/)]
+
+**描述**
+
+给你两个字符串数组 word1 和 word2 。如果两个数组表示的字符串相同，返回 true ；否则，返回 false 。
+
+数组表示的字符串 是由数组中的所有元素 按顺序 连接形成的字符串。
+
+**示例 1：**
+
+```
+输入：word1 = ["ab", "c"], word2 = ["a", "bc"]
+输出：true
+解释：
+word1 表示的字符串为 "ab" + "c" -> "abc"
+word2 表示的字符串为 "a" + "bc" -> "abc"
+两个字符串相同，返回 true
+```
+
+**示例 2：**
+
+```
+输入：word1 = ["a", "cb"], word2 = ["ab", "c"]
+输出：false
+```
+
+**示例 3：**
+
+```
+输入：word1  = ["abc", "d", "defg"], word2 = ["abcddefg"]
+输出：true
+```
+
+**提示：**
+
+1. 1 <= word1.length, word2.length <= 103
+2. 1 <= word1[i].length, word2[i].length <= 103
+3. 1 <= sum(word1[i].length), sum(word2[i].length) <= 103
+4. word1[i] 和 word2[i] 由小写字母组成
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean arrayStringsAreEqual(String[] word1, String[] word2) {
+        // 拼接成两个字符串之后比较
+        StringBuilder sb1 = new StringBuilder();
+        StringBuilder sb2 = new StringBuilder();
+        for(String s : word1){
+            sb1.append(s);
+        }
+        for(String s : word2){
+            sb2.append(s);
+        }
+        return sb1.toString().equals(sb2.toString());
+    }
+}
+```
+
+## 71.[[1668. 最大重复子字符串](https://leetcode-cn.com/problems/maximum-repeating-substring/)]
+
+**描述**
+
+给你一个字符串 sequence ，如果字符串 word 连续重复 k 次形成的字符串是 sequence 的一个子字符串，那么单词 word 的 重复值为 k 。单词 word 的 最大重复值 是单词 word 在 sequence 中最大的重复值。如果 word 不是 sequence 的子串，那么重复值 k 为 0 。
+
+给你一个字符串 sequence 和 word ，请你返回 最大重复值 k 。
+
+**示例 1：**
+
+```
+输入：sequence = "ababc", word = "ab"
+输出：2
+解释："abab" 是 "ababc" 的子字符串。
+```
+
+**示例 2：**
+
+```
+输入：sequence = "ababc", word = "ba"
+输出：1
+解释："ba" 是 "ababc" 的子字符串，但 "baba" 不是 "ababc" 的子字符串。
+```
+
+**示例 3：**
+
+```
+输入：sequence = "ababc", word = "ac"
+输出：0
+解释："ac" 不是 "ababc" 的子字符串。
+```
+
+**提示：**
+
+1. `1 <= sequence.length <= 100`
+2. `1 <= word.length <= 100`
+3. `sequence` 和 `word` 都只包含小写英文字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxRepeating(String sequence, String word) {
+        int k = 0;
+        int tmp = 0;
+        int count = word.length();
+        // 符合重复字符的, 每次位置加上word的长度
+        // 不符合的+1;
+        for(int i=0; i<=sequence.length()-count;){
+            if(sequence.startsWith(word, i)){
+                // 比较数量
+                k = Math.max(k, ++tmp);
+                i += count;
+            }else{
+                i++;
+                tmp = 0;
+            }
+        }
+        return k;
+    }
+}
+```
+
