--- a/面试/算法/动态规划/简单/动态规划-简单(1-20).md
+++ b/面试/算法/动态规划/简单/动态规划-简单(1-20).md
@@ -221,32 +221,33 @@ class Solution {
 
 ## 5.[[276.栅栏涂色](https://leetcode-cn.com/problems/paint-fence)]
 
-## 6.[[198. 打家劫舍](https://leetcode-cn.com/problems/house-robber/)]
+## 6.[[303. 区域和检索 - 数组不可变](https://leetcode-cn.com/problems/range-sum-query-immutable/)]
 
 **描述**
 
-你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+给定一个整数数组  nums，求出数组从索引 i 到 j（i ≤ j）范围内元素的总和，包含 i、j 两点。
 
-给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+实现 NumArray 类：
+
+NumArray(int[] nums) 使用数组 nums 初始化对象
+int sumRange(int i, int j) 返回数组 nums 从索引 i 到 j（i ≤ j）范围内元素的总和，包含 i、j 两点（也就是 sum(nums[i], nums[i + 1], ... , nums[j])）
 
 **示例**
 
 **示例 1：**
 
 ```
-输入：[1,2,3,1]
-输出：4
-解释：偷窃 1 号房屋 (金额 = 1) ，然后偷窃 3 号房屋 (金额 = 3)。
-     偷窃到的最高金额 = 1 + 3 = 4 。
-```
+输入：
+["NumArray", "sumRange", "sumRange", "sumRange"]
+[[[-2, 0, 3, -5, 2, -1]], [0, 2], [2, 5], [0, 5]]
+输出：
+[null, 1, -1, -3]
 
-**示例 2：**
-
-```
-输入：[2,7,9,3,1]
-输出：12
-解释：偷窃 1 号房屋 (金额 = 2), 偷窃 3 号房屋 (金额 = 9)，接着偷窃 5 号房屋 (金额 = 1)。
-     偷窃到的最高金额 = 2 + 9 + 1 = 12 。
+解释：
+NumArray numArray = new NumArray([-2, 0, 3, -5, 2, -1]);
+numArray.sumRange(0, 2); // return 1 ((-2) + 0 + 3)
+numArray.sumRange(2, 5); // return -1 (3 + (-5) + 2 + (-1)) 
+numArray.sumRange(0, 5); // return -3 ((-2) + 0 + 3 + (-5) + 2 + (-1))
 ```
 
 **提示：**
@@ -259,26 +260,105 @@ class Solution {
 **Java**
 
 ```java
-class Solution {
-    public int rob(int[] nums) {
-        if(nums.length == 0) return 0;
-        if(nums.length == 1) return nums[0];
-        // 记录i-2次的最优解
-        int first = nums[0];
-        // 记录i-1次的最优解
-        int second = Math.max(nums[1], nums[0]);
-        for(int i=2; i<nums.length; i++){
-            int tmp = second;
-            // 如果当前的钱 加上 i-2次的最优解, 大于i-1次的最优解. 记录当前的钱 加上 i-2次的最优解
-            // 反之, i-1的最优解不变
-            if(nums[i] + first > second){
-                second = nums[i] + first;  
+class NumArray {
+    private int[] sums;
+
+    public NumArray(int[] nums) {
+        // 传入nums, 提前计算好每一位的和
+        if(nums.length != 0){
+            for(int i=1; i<nums.length; i++){
+                nums[i] = nums[i] + nums[i-1]; 
             }
-            first = tmp;
+            sums = nums;
         }
-        return second;
+    }
+    public int sumRange(int i, int j) {
+        if(i == 0) return sums[j];
+        return sums[j] - sums[i-1];
+    }
+}
+
+```
+
+## 7.[[392. 判断子序列](https://leetcode-cn.com/problems/is-subsequence/)]
+
+**描述**
+
+给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
+
+字符串的一个子序列是原始字符串删除一些（也可以不删除）字符而不改变剩余字符相对位置形成的新字符串。（例如，"ace"是"abcde"的一个子序列，而"aec"不是）。
+
+进阶：
+
+如果有大量输入的 S，称作 S1, S2, ... , Sk 其中 k >= 10亿，你需要依次检查它们是否为 T 的子序列。在这种情况下，你会怎样改变代码
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "abc", t = "ahbgdc"
+输出：true
+```
+
+**示例 2：**
+
+```
+输入：s = "axc", t = "ahbgdc"
+输出：false
+```
+
+**提示：**
+
+- `0 <= s.length <= 100`
+- `0 <= t.length <= 10^4`
+- 两个字符串都只由小写字符组成。
+
+**题解**
+
+**Java**
+
+动态规划解法
+
+```java
+class Solution {
+    public boolean isSubsequence(String s, String t) {
+        int tlen = t.length();
+        // 创建一个二维数组
+        // 每一行表示对应位置的字符, 后面的全部字符的位置
+        // 例:   t = ade;
+        //       0 3 3 1 2 ...    包含字符a和其后全部字符的位置
+        //       3 3 3 1 2 ...    包含字符d和其后全部字符的位置
+        //       3 3 3 3 2 ...    包含字符e的位置
+        //       3 3 3 3 3 ...    这一位只存储t的长度, 所有的字符位置不会等于t的长度
+        int[][] bucket = new int[tlen+1][26];
+        // 将最后一排, 填充字符长度
+        Arrays.fill(bucket[tlen], tlen);
+        // 从后向前遍历bucket, 读取字符串t, 存储其位置
+        for(int i=tlen-1; i>=0; i--){
+            for(int j=0; j<26; j++){
+                // 如果相等, 存储当前的位置
+                if(t.charAt(i) == j + 'a'){
+                    bucket[i][j] = i;
+                // 不相等, 当前位存储, 上一行的对应的存储的位置
+                }else{
+                    bucket[i][j] = bucket[i+1][j];
+                }
+            }
+        }
+        int start = 0;
+        // 遍历字符串s
+        for(int i=0; i<s.length(); i++){
+            // 如果当前字符对应的位置, 等于字符串t的长度, 则说明, 后续的字符没有当前字符, 
+            if(bucket[start][s.charAt(i) - 'a'] == tlen){
+                return false;
+            // 如果有对应的位置, 则跳转对应的位置的下一行, 继续寻找
+            }else{
+                start = bucket[start][s.charAt(i) - 'a'] + 1;
+            }
+        }
+        return true;
     }
 }
 ```
 
-## 
