--- a/面试/算法/动态规划/简单/动态规划-简单(1-20).md
+++ b/面试/算法/动态规划/简单/动态规划-简单(1-20).md
@@ -362,3 +362,28 @@ class Solution {
 }
 ```
 
+双指针
+
+```java
+class Solution {
+    public boolean isSubsequence(String s, String t) {
+        int sIndex = 0;
+        int tIndex = 0;
+        char[] charsS = s.toCharArray();
+        char[] charsT = t.toCharArray();
+        while(sIndex < charsS.length && tIndex < charsT.length){
+            if(charsS[sIndex] == charsT[tIndex]){
+                sIndex++;
+                tIndex++;
+            }else{
+                tIndex++;
+            }
+        }
+        if(sIndex == charsS.length){
+            return true;
+        }
+        return false;
+    }
+}
+```
+
