--- a/面试/算法/动态规划/简单/动态规划-简单(1-20).md
+++ b/面试/算法/动态规划/简单/动态规划-简单(1-20).md
@@ -387,3 +387,64 @@ class Solution {
 }
 ```
 
+## 8.[[746. 使用最小花费爬楼梯](https://leetcode-cn.com/problems/min-cost-climbing-stairs/)]
+
+**描述**
+
+数组的每个索引作为一个阶梯，第 i个阶梯对应着一个非负数的体力花费值 cost[i](索引从0开始)。
+
+每当你爬上一个阶梯你都要花费对应的体力花费值，然后你可以选择继续爬一个阶梯或者爬两个阶梯。
+
+您需要找到达到楼层顶部的最低花费。在开始时，你可以选择从索引为 0 或 1 的元素作为初始阶梯。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: cost = [10, 15, 20]
+输出: 15
+解释: 最低花费是从cost[1]开始，然后走两步即可到阶梯顶，一共花费15。
+```
+
+**示例 2：**
+
+```
+输入: cost = [1, 100, 1, 1, 1, 100, 1, 1, 100, 1]
+输出: 6
+解释: 最低花费方式是从cost[0]开始，逐个经过那些1，跳过cost[3]，一共花费6。
+```
+
+**提示：**
+
+- `cost` 的长度将会在 `[2, 1000]`。
+- 每一个 `cost[i]` 将会是一个Integer类型，范围为 `[0, 999]`。
+
+**题解**
+
+**Java**
+
+动态规划解法
+
+```java
+class Solution {
+    public int minCostClimbingStairs(int[] cost) {
+        // 保存大上一步的最优解
+        int first = cost[0];
+        // 保存上一步的最优解
+        int second = cost[1];
+        for(int i=2; i<cost.length; i++){
+            int tmp = second;
+            // 比较上两步的值的大小
+            if(first < second){
+                second = first + cost[i];
+            }else{
+                second = second + cost[i];
+            }
+            first = tmp;
+        }
+        return first > second ? second : first;
+    }
+}
+```
+
