--- a/面试/算法/动态规划/简单/动态规划-简单(1-20).md
+++ b/面试/算法/动态规划/简单/动态规划-简单(1-20).md
@@ -219,7 +219,7 @@ class Solution {
 }
 ```
 
-## 5.[[276.栅栏涂色](https://leetcode-cn.com/problems/paint-fence)]
+## 5.[[276. 栅栏涂色](https://leetcode-cn.com/problems/paint-fence)]
 
 ## 6.[[303. 区域和检索 - 数组不可变](https://leetcode-cn.com/problems/range-sum-query-immutable/)]
 
@@ -444,6 +444,58 @@ class Solution {
             first = tmp;
         }
         return first > second ? second : first;
+    }
+}
+```
+
+## 9.[[1025. 除数博弈](https://leetcode-cn.com/problems/divisor-game/)]
+
+**描述**
+
+爱丽丝和鲍勃一起玩游戏，他们轮流行动。爱丽丝先手开局。
+
+最初，黑板上有一个数字 N 。在每个玩家的回合，玩家需要执行以下操作：
+
+选出任一 x，满足 0 < x < N 且 N % x == 0 。
+用 N - x 替换黑板上的数字 N 。
+如果玩家无法执行这些操作，就会输掉游戏。
+
+只有在爱丽丝在游戏中取得胜利时才返回 True，否则返回 False。假设两个玩家都以最佳状态参与游戏。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：2
+输出：true
+解释：爱丽丝选择 1，鲍勃无法进行操作。
+```
+
+**示例 2：**
+
+```
+输入：3
+输出：false
+解释：爱丽丝选择 1，鲍勃也选择 1，然后爱丽丝无法进行操作。
+```
+
+**提示：**
+
+- `1 <= N <= 1000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // N等于1时，爱丽丝输，N等于2时爱丽丝赢
+    // 如果N为奇数，奇数的因数一定是奇数， 那么到鲍勃的时候就会是偶数
+    // 鲍勃只需要选1， 轮到爱丽丝又会是奇数， 直到最后只剩下1, 爱丽丝输
+    // 所以N为奇数时爱丽丝输， 为偶数时爱丽丝赢
+    public boolean divisorGame(int N) {
+        return N % 2 == 0;
     }
 }
 ```
