--- a/面试/算法/贪心算法/简单/贪心-简单(1-20).md
+++ b/面试/算法/贪心算法/简单/贪心-简单(1-20).md
@@ -428,7 +428,7 @@ class Solution {
 }
 ```
 
-## 6.[[944. 删列造序](https://leetcode-cn.com/problems/delete-columns-to-make-sorted/)]
+## 7.[[944. 删列造序](https://leetcode-cn.com/problems/delete-columns-to-make-sorted/)]
 
 **描述**
 
@@ -497,3 +497,465 @@ class Solution {
 }
 ```
 
+## 8.[[1005. K 次取反后最大化的数组和](https://leetcode-cn.com/problems/maximize-sum-of-array-after-k-negations/)]
+
+**描述**
+
+给定一个整数数组 A，我们只能用以下方法修改该数组：我们选择某个索引 i 并将 A[i] 替换为 -A[i]，然后总共重复这个过程 K 次。（我们可以多次选择同一个索引 i。）
+
+以这种方式修改数组后，返回数组可能的最大和。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：A = [4,2,3], K = 1
+输出：5
+解释：选择索引 (1,) ，然后 A 变为 [4,-2,3]。
+```
+
+**示例 2：**
+
+```
+输入：A = [3,-1,0,2], K = 3
+输出：6
+解释：选择索引 (1, 2, 2) ，然后 A 变为 [3,1,0,2]。
+```
+
+**示例 2：**
+
+```
+输入：A = [2,-3,-1,5,-4], K = 2
+输出：13
+解释：选择索引 (1, 4) ，然后 A 变为 [2,3,-1,5,4]。
+```
+
+**提示：**
+
+- `1 <= A.length <= 10000`
+- `1 <= K <= 10000`
+- `-100 <= A[i] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int largestSumAfterKNegations(int[] A, int K) {
+        // 先排序, 让负数排在前面
+        Arrays.sort(A);
+        // 将K个负数变成正数
+        for(int i=0; i<A.length; i++){
+            if(K != 0 && A[i] < 0){
+                A[i] = -A[i];
+                K--;
+            }else{
+                break;
+            }
+        }
+        // 如果K是奇数, 说明A中负数不足K个, 并且还要颠倒1个数
+        int sum = A[0];
+        // 求和并且找到最接近0的数
+        if(K % 2 == 1){
+            int min = A[0];
+            boolean flag =  
+            for(int i=1; i<A.length; i++){
+                sum += A[i];
+                min = Math.min(Math.abs(min),  Math.abs(A[i]));
+            }
+            sum -= 2 * min;
+        // 如果K是偶数, 直接求和
+        }else{
+            for(int i=1; i<A.length; i++){
+                sum += A[i];
+            }
+        }
+        return sum;
+    }
+}
+```
+
+## 9.[[1046. 最后一块石头的重量](https://leetcode-cn.com/problems/last-stone-weight/)]
+
+**描述**
+
+有一堆石头，每块石头的重量都是正整数。
+
+每一回合，从中选出两块 最重的 石头，然后将它们一起粉碎。假设石头的重量分别为 x 和 y，且 x <= y。那么粉碎的可能结果如下：
+
+如果 x == y，那么两块石头都会被完全粉碎；
+如果 x != y，那么重量为 x 的石头将会完全粉碎，而重量为 y 的石头新重量为 y-x。
+最后，最多只会剩下一块石头。返回此石头的重量。如果没有石头剩下，就返回 0。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[2,7,4,1,8,1]
+输出：1
+解释：
+先选出 7 和 8，得到 1，所以数组转换为 [2,4,1,1,1]，
+再选出 2 和 4，得到 2，所以数组转换为 [2,1,1,1]，
+接着是 2 和 1，得到 1，所以数组转换为 [1,1,1]，
+最后选出 1 和 1，得到 0，最终数组转换为 [1]，这就是最后剩下那块石头的重量。
+```
+
+**提示：**
+
+- `1 <= stones.length <= 30`
+- `1 <= stones[i] <= 1000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用堆
+    public int lastStoneWeight(int[] stones) {
+        Queue<Integer> queue = new PriorityQueue((o1, o2) -> {
+            return (int)o2 - (int)o1;
+        });
+        for(int stone : stones){
+            queue.add(stone);
+        }
+        while(queue.size() != 1){
+            queue.add(queue.poll() - queue.poll());
+        }
+        return queue.poll();
+    }
+}
+```
+
+## 10.[[1196. 最多可以买到的苹果数量](https://leetcode-cn.com/problems/how-many-apples-can-you-put-into-the-basket)]
+
+## 11.[[1217. 玩筹码](https://leetcode-cn.com/problems/minimum-cost-to-move-chips-to-the-same-position/)]
+
+**描述**
+
+数轴上放置了一些筹码，每个筹码的位置存在数组 chips 当中。
+
+你可以对 任何筹码 执行下面两种操作之一（不限操作次数，0 次也可以）：
+
+将第 i 个筹码向左或者右移动 2 个单位，代价为 0。
+将第 i 个筹码向左或者右移动 1 个单位，代价为 1。
+最开始的时候，同一位置上也可能放着两个或者更多的筹码。
+
+返回将所有筹码移动到同一位置（任意位置）上所需要的最小代价。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：chips = [1,2,3]
+输出：1
+解释：第二个筹码移动到位置三的代价是 1，第一个筹码移动到位置三的代价是 0，总代价为 1。
+```
+
+**示例 2：**
+
+```
+输入：chips = [2,2,2,3,3]
+输出：2
+解释：第四和第五个筹码移动到位置二的代价都是 1，所以最小总代价为 2。
+```
+
+**提示：**
+
+- `1 <= chips.length <= 100`
+- `1 <= chips[i] <= 10^9`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 因为移动两步无消耗, 所以只要比较偶数和奇数的数字数量哪个比较少
+    public int minCostToMoveChips(int[] position) {
+        int odd = 0;
+        int even = 0;
+        for(int num : position){
+            if(num % 2 == 0){
+                even++;
+            }else{
+                odd++;
+            }
+        }
+        return Math.min(odd, even);
+    }
+}
+```
+
+## 12.[[1221. 分割平衡字符串](https://leetcode-cn.com/problems/split-a-string-in-balanced-strings/)]
+
+**描述**
+
+在一个「平衡字符串」中，'L' 和 'R' 字符的数量是相同的。
+
+给出一个平衡字符串 s，请你将它分割成尽可能多的平衡字符串。
+
+返回可以通过分割得到的平衡字符串的最大数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "RLRRLLRLRL"
+输出：4
+解释：s 可以分割为 "RL", "RRLL", "RL", "RL", 每个子字符串中都包含相同数量的 'L' 和 'R'。
+```
+
+**示例 2：**
+
+```
+输入：s = "RLLLLRRRLR"
+输出：3
+解释：s 可以分割为 "RL", "LLLRRR", "LR", 每个子字符串中都包含相同数量的 'L' 和 'R'。
+```
+
+**示例 3：**
+
+```
+输入：s = "LLLLRRRR"
+输出：1
+解释：s 只能保持原样 "LLLLRRRR".
+```
+
+**提示：**
+
+- `1 <= chips.length <= 100`
+- `1 <= chips[i] <= 10^9`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 判断L的数量, 遇到L +1, 遇到R -1, 每次L数量为0时, count+1;
+    public int balancedStringSplit(String s) {
+        int count = 0;
+        int lCount = 0;
+        for(char c : s.toCharArray()){
+            if(c == 'L'){
+                lCount++;
+            }else{
+                lCount--;
+            }
+            if(lCount == 0) count++;
+        }
+        return count;
+    }
+}
+```
+
+## 13.[[1403. 非递增顺序的最小子序列](https://leetcode-cn.com/problems/minimum-subsequence-in-non-increasing-order/)]
+
+**描述**
+
+给你一个数组 nums，请你从中抽取一个子序列，满足该子序列的元素之和 严格 大于未包含在该子序列中的各元素之和。
+
+如果存在多个解决方案，只需返回 长度最小 的子序列。如果仍然有多个解决方案，则返回 元素之和最大 的子序列。
+
+与子数组不同的地方在于，「数组的子序列」不强调元素在原数组中的连续性，也就是说，它可以通过从数组中分离一些（也可能不分离）元素得到。
+
+注意，题目数据保证满足所有约束条件的解决方案是 唯一 的。同时，返回的答案应当按 非递增顺序 排列。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [4,3,10,9,8]
+输出：[10,9] 
+解释：子序列 [10,9] 和 [10,8] 是最小的、满足元素之和大于其他各元素之和的子序列。但是 [10,9] 的元素之和最大。
+```
+
+**示例 2：**
+
+```
+输入：nums = [4,4,7,6,7]
+输出：[7,7,6] 
+解释：子序列 [7,7] 的和为 14 ，不严格大于剩下的其他元素之和（14 = 4 + 4 + 6）。因此，[7,6,7] 是满足题意的最小子序列。注意，元素按非递增顺序返回。
+```
+
+**示例 3：**
+
+```
+输入：nums = [6]
+输出：[6]
+```
+
+**提示：**
+
+- `1 <= nums.length <= 500`
+- `1 <= nums[i] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 先排序, 算出和, 然后从大到小每次累加, 计算当前和是否大于全部和-当前和
+    public List<Integer> minSubsequence(int[] nums) {
+        Arrays.sort(nums);
+        int sum = 0;
+        for(int num : nums){
+            sum += num;
+        }
+        int tmp = 0;
+        List<Integer> ans = new ArrayList();
+        for(int i=nums.length-1; i>=0; i--){
+            ans.add(nums[i]);
+            tmp += nums[i];
+            if(tmp > sum - tmp){
+                break;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 14.[[1518. 换酒问题](https://leetcode-cn.com/problems/water-bottles/)]
+
+**描述**
+
+小区便利店正在促销，用 numExchange 个空酒瓶可以兑换一瓶新酒。你购入了 numBottles 瓶酒。
+
+如果喝掉了酒瓶中的酒，那么酒瓶就会变成空的。
+
+请你计算 最多 能喝到多少瓶酒。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：numBottles = 9, numExchange = 3
+输出：13
+解释：你可以用 3 个空酒瓶兑换 1 瓶酒。
+所以最多能喝到 9 + 3 + 1 = 13 瓶酒。
+```
+
+**示例 2：**
+
+```
+输入：numBottles = 15, numExchange = 4
+输出：19
+解释：你可以用 4 个空酒瓶兑换 1 瓶酒。
+所以最多能喝到 15 + 3 + 1 = 19 瓶酒。
+```
+
+**示例 3：**
+
+```
+输入：numBottles = 5, numExchange = 5
+输出：6
+```
+
+**提示：**
+
+- `1 <= numBottles <= 100`
+- `2 <= numExchange <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 每喝一瓶count++, 空瓶数量+1, 空瓶数量够了, 就换一瓶
+    public int numWaterBottles(int numBottles, int numExchange) {
+        int count = 0;
+        int emptyBottles = 0;
+        while(numBottles > 0){
+            numBottles--;
+            count++;
+            emptyBottles++;
+            if(emptyBottles == numExchange){
+                numBottles++;
+                emptyBottles = 0;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 15.[[1708. Largest Subarray Length K](https://leetcode-cn.com/problems/largest-subarray-length-k)]
+
+## 16.[[1710. 卡车上的最大单元数](https://leetcode-cn.com/problems/maximum-units-on-a-truck/)]
+
+**描述**
+
+请你将一些箱子装在 一辆卡车 上。给你一个二维数组 boxTypes ，其中 boxTypes[i] = [numberOfBoxesi, numberOfUnitsPerBoxi] ：
+
+numberOfBoxesi 是类型 i 的箱子的数量。
+numberOfUnitsPerBoxi 是类型 i 每个箱子可以装载的单元数量。
+整数 truckSize 表示卡车上可以装载 箱子 的 最大数量 。只要箱子数量不超过 truckSize ，你就可以选择任意箱子装到卡车上。
+
+返回卡车可以装载 单元 的 最大 总数。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：boxTypes = [[1,3],[2,2],[3,1]], truckSize = 4
+输出：8
+解释：箱子的情况如下：
+- 1 个第一类的箱子，里面含 3 个单元。
+- 2 个第二类的箱子，每个里面含 2 个单元。
+- 3 个第三类的箱子，每个里面含 1 个单元。
+可以选择第一类和第二类的所有箱子，以及第三类的一个箱子。
+单元总数 = (1 * 3) + (2 * 2) + (1 * 1) = 8
+```
+
+**示例 2：**
+
+```
+输入：boxTypes = [[5,10],[2,5],[4,7],[3,9]], truckSize = 10
+输出：91
+```
+
+**提示：**
+
+- 1 <= boxTypes.length <= 1000
+- 1 <= numberOfBoxesi, numberOfUnitsPerBoxi <= 1000
+- 1 <= truckSize <= 106
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 先排序, 从单元最大的盒子开始装
+    public int maximumUnits(int[][] boxTypes, int truckSize) {
+        Arrays.sort(boxTypes, (o1, o2) -> {
+            return o2[1] - o1[1];
+        });
+        int count = 0;
+        for(int[] boxType : boxTypes){
+            if(truckSize > boxType[0]){
+                count += boxType[0] * boxType[1];
+                truckSize -= boxType[0];
+            }else{
+                count += truckSize * boxType[1];
+                break;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 
