--- a/后端/项目管理工具.md
+++ b/后端/项目管理工具.md
@@ -44,7 +44,61 @@ https://mvnrepository.com/
 mvn install:install-file -DgroupId=jar包的groupId -DartifactId=jar包名 -Dversion=1.0 -Dpackaging=jar -Dfile=\路径\加包名称-1.0.jar
 ```
 
-## pom文件
+## 标签
+
+### dependencyManagement
+
+```xml
+<!-- 
+	dependencyManagement用于父项目声明依赖, 子项目继承父项目时, 需要显式的声明需要使用的依赖, 如果子项目不指定依赖的version和scope等, 会去寻找父项目中dependencyManagement声明的依赖, 如果指定了版本号, 会按照子项目设定的版本
+	父项目如果使用dependencies, 那么子项目会继承全部依赖, 不管这些依赖都有没有用
+-->
+<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>com.juvenxu.sample</groupId>
+            <artifactid>sample-dependency-infrastructure</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <!-- <type>pom</type>和<scope>import</scope>, 会找到指定分类pom, 并导入 -->
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
+```
+
+#### 分类pom
+
+该项目, 只写一类jar包, 被其他pom所引用
+
+```xml
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.juvenxu.sample</groupId>
+  <artifactId>sample-dependency-infrastructure</artifactId>
+  <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactid>junit</artifactId>
+          <version>4.8.2</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>log4j</groupId>
+          <artifactid>log4j</artifactId>
+          <version>1.2.16</version>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
+</project>
+```
+
+
+
+### build
 
 ```xml
 <!-- 解决静态资源导出问题 -->
